--- a/styles/global.css
+++ b/styles/global.css
@@ -4,11 +4,11 @@
     box-sizing: border-box;
 }
 
-:root{
-    --brand-color-linght: #60A5FA;
-    --brand-color-dark: #1d4ed8 ;
+:root {
+    --brand-color-light: #60A5FA; /* Corrigido o nome da variável */
+    --brand-color-dark: #1d4ed8;
     --bg-color: #0F172A;
-    --stroke-color: #0F172A ;
+    --stroke-color: #0F172A;
     --text-color-primary: #F1F5F9;
     --text-color-secondary: #CBD5E1;
 
@@ -22,7 +22,7 @@
 }
 
 body {
-    font: var (--text);
+    font: var(--text); /* Removido o espaço entre "var" e o parêntese */
     color: var(--text-color-primary);
     background-color: var(--bg-color);
 }
@@ -32,8 +32,8 @@ a {
     color: inherit;
 }
 
-a:hover{
-    color: var(--brand-color-light)
+a:hover {
+    color: var(--brand-color-light); /* Corrigido o nome da variável */
 }
 
 h1, h2, h3 {
@@ -44,25 +44,23 @@ img {
     max-width: 100%;
 }
 
-
 .container {
     max-width: 1200px;
     padding-inline: 32px;
     margin-inline: auto;
 }
 
-main{
+main {
     margin-top: 40px;
 }
 
-
-.content-tag{
+.content-tag {
     display: inline-block;
     background-color: var(--brand-color-dark);
     padding: 4px 8px;
     border-radius: 4px;
     font: 500 10px/1.2 var(--font-family);
-    text-transform:  uppercase;
+    text-transform: uppercase;
     letter-spacing: 0.04em;
     color: var(--text-color-primary);
     box-shadow: 0px 4px 16px rgba(2, 6, 23, 0.251);
