--- a/styles/sections.css
+++ b/styles/sections.css
@@ -1,34 +1,37 @@
 #featured {
     img {
-        height:100%;
+        height: 100%;
         object-fit: cover;
         border-radius: 4px;
     }
 
-    .card{
-        border-radius:4px;
-        overflow:hidden;
+    .card {
+        border-radius: 4px;
+        overflow: hidden;
         position: relative;
 
-        &:before{
+        &::before {
             content: "";
             position: absolute;
             inset: 0;
-            top: 50;
+            top: 50%;
             background: linear-gradient(
                 180deg,
                 transparent 0%,
-                #020617 100%;
-            )
+                #020617 100%
+            );
         }
 
         figcaption {
-            position:absolute
+            position: absolute;
             bottom: 0;
-
             padding: 24px;
 
-            h2{
+            &:has(.text-lg) {
+                padding: 12px;
+            }
+
+            h2 {
                 margin-top: 8px;
             }
         }
