--- a/styles/sections.css
+++ b/styles/sections.css
@@ -22,6 +22,8 @@ header a {
 }
 
 #featured {
+grid-area: featured;
+
     img {
         height: 100%;
         object-fit: cover;
@@ -62,6 +64,7 @@ header a {
 }
 
 #weekly {
+    grid-area: weekly;
 
 header a {
     justify-self: end;
@@ -100,5 +103,34 @@ header a {
             margin-top: 8px;
             font-weight: 900;
         }
+    }
+}
+
+#ai {
+grid-area: ai;
+    width: 176px;
+    aspect-ratio: 1/1;
+    object-fit: cover;
+}
+
+h3 {
+    margin-block: 8px 4px;
+}
+
+aside {
+    grid-area: aside;
+}
+
+#more {
+    margin-top: 32px;
+
+    h3{
+        margin-top: 8px;
+    }
+
+    img{
+        width: 72px;
+        aspect-ratio: 1/1;
+        object-fit: cover;
     }
 }
